2010-08-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def (CopyLZFile, GetExpandedNameA, GetExpandedNameW, LZClose,
	LZCopy, LZInit, LZOpenFileA, LZOpenFileW, LZRead, LZSeek, OpenProcessToken,
	OpenThreadToken, RegCloseKey, RegCreateKeyExA, RegCreateKeyExW,
	RegDeleteKeyExA, RegDeleteKeyExW, RegDeleteValueA, RegDeleteValueW,
	RegEnumKeyExA, RegEnumKeyExW, RegEnumValueA, RegEnumValueW, RegFlushKey,
	RegGetKeySecurity, RegLoadKeyA, RegLoadKeyW, RegNotifyChangeKeyValue,
	RegOpenCurrentUser, RegOpenKeyExA, RegOpenKeyExW, RegOpenUserClassesRoot,
	RegQueryInfoKeyA, RegQueryInfoKeyW, RegQueryValueExA, RegQueryValueExW,
	RegRestoreKeyA, RegRestoreKeyW, RegSetKeySecurity, RegSetValueExA,
	RegSetValueW, RegUnLoadKeyA, RegUnLoadKeyW, RtlCaptureStackBackTrace,
	RtlFillMemory, RtlMoveMemory, RtlZeroMemory, SetThreadToken): Remove
	conflicting definition.
	* lib/th32.def: Remove.
	* lib/ntdll.def (RtlUnwind): Remove conflicting definition.
	* lib/version.def (VerLanguageNameA, VerLanguageNameW): Remove conflicting
	definition.

2010-08-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def (CreateProcessAsUserW): Remove definition.

2010-08-20  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def: Regenerate using gendef on a Win7 machine.

2010-08-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h: Define FILE_ATTRIBUTE_VIRTUAL.  Change
	FILE_ATTRIBUTE_VALID_FLAGS accordingly.
	* include/ddk/winddk.h: Ditto.

2010-08-18  Ladislav Michl  <ladis@users.sourceforge.net>

	* include/winbase.h (SYMBOLIC_LINK_FLAG_DIRECTORY, CreateSymbolicLinkW,
	CreateSymbolicLinkA, CreateSymbolicLink): Define

2010-07-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def(FatalExit): Correct definiton.

2010-07-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/basetyps.h (REFGUID, REFIID, REFCLSID, REFFMTID): Revert change
	from 2010-07-17 since it breaks several applications.
